--- a/flask_sample/requirements.txt
+++ b/flask_sample/requirements.txt
@@ -1,17 +1,17 @@
-# This file is used by pip to install required python packages
-# Usage: python -m pip install -r requirements.txt
-
-# To make this file from scratch
-# 1) python -m pip install flask
-# 2) python -m pip install gunicorn
-# 3) python -m pip freeze > requirements.txt
-
+attrs==22.1.0
 click==8.1.3
+exceptiongroup==1.0.0
 Flask==2.2.2
 gunicorn==20.1.0
 importlib-metadata==5.0.0
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
+pyparsing==3.0.9
+pytest==7.2.0
+tomli==2.0.1
 Werkzeug==2.2.2
 zipp==3.9.0
