--- a/flask_sample/requirements.txt
+++ b/flask_sample/requirements.txt
@@ -8,8 +8,10 @@ iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.31
 packaging==21.3
 pluggy==1.0.0
+protobuf==3.20.1
 pyparsing==3.0.9
 pytest==7.2.0
 tomli==2.0.1
