--- a/flask_sample/requirements.txt
+++ b/flask_sample/requirements.txt
@@ -14,6 +14,7 @@ pluggy==1.0.0
 protobuf==3.20.1
 pyparsing==3.0.9
 pytest==7.2.0
+python-dotenv==0.21.0
 tomli==2.0.1
 Werkzeug==2.2.2
 zipp==3.9.0
