--- a/.github/workflows/Deploy-Heroku-Dev.yml
+++ b/.github/workflows/Deploy-Heroku-Dev.yml
@@ -17,7 +17,7 @@ jobs:
       DB_URL: ${{secrets.DB_URL}}
       PORT: 8080
       # change to the project directory you're deploying
-      WORKING_DIRECTORY: flask_sample
+      WORKING_DIRECTORY: BusinessManagement
     defaults:
       run:
         working-directory: ${{env.WORKING_DIRECTORY}}
