Made changes to yml files

--- a/.github/workflows/Deploy-Heroku-DevMS1.yml
+++ b/.github/workflows/Deploy-Heroku-DevMS1.yml
@@ -1,12 +1,13 @@
 # Your workflow name.
-name: Deploy to heroku prod.
+name: Deploy to heroku dev.
 
 # Run workflow on every push to master branch.
 
 on:
   push:
     branches:
-      - prod
+      - dev
+      - MileStone-1
 
 # Your workflows jobs.
 jobs:
@@ -16,7 +17,7 @@ jobs:
       DB_URL: ${{secrets.DB_URL}}
       PORT: 8080
       # change to the project directory you're deploying
-      WORKING_DIRECTORY: BusinessManagement
+      WORKING_DIRECTORY: flask_sample
     defaults:
       run:
         working-directory: ${{env.WORKING_DIRECTORY}}
@@ -45,7 +46,7 @@ jobs:
           heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
 
           # Name of the heroku application to which the build is to be sent.
-          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_PROD }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME_DEV2 }}
 
           # (Optional, default: "./")
           # Dockerfile directory.
